--- a/index.html
+++ b/index.html
@@ -113,11 +113,16 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading">Portfolio</h2>
+          <div class="button-group filters-button-group">
+            <a class="a is-checked" data-filter="*">All</a>
+            <a class="a" data-filter=".personal">Personal</a>
+            <a class="a" data-filter=".pro">Professional</a>
+          </div>
           <h3 class="section-subheading text-muted"></h3>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-4 col-sm-6 portfolio-item">
+      <div class="row grid">
+        <div class="col-lg-4 col-sm-6 portfolio-item element-item pro">
           <div class="item-wrapper">
             <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
               <div class="portfolio-hover">
@@ -125,15 +130,16 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img src="img/flockoli/flock2.png" class="img-responsive" alt="">
+              <div class="img" style="background-image: url('/img/os/Screen Shot 2018-07-19 at 12.55.09 PM.png')"></div>
+              <img src="/img/os/Screen Shot 2018-07-19 at 12.55.09 PM.png" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Flockoli</h4>
-              <p class="text-muted">FlockOS Application</p>
+              <h4>Orthoscience</h4>
+              <p class="text-muted">Craft CMS</p>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="col-lg-4 col-sm-6 portfolio-item element-item pro">
           <div class="item-wrapper">
             <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
               <div class="portfolio-hover">
@@ -141,16 +147,18 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
+              <div class="img" style="background-image: url('/img/tla/Screen Shot 2018-07-19 at 1.00.38 PM.png')"></div>
+
               <img src="img/portfolio/home.png" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Wez on Film</h4>
-              <p class="text-muted">Full Stack Web App</p>
+              <h4>The Learning Accelerator</h4>
+              <p class="text-muted">Craft CMS</p>
             </div>
           </div>
 
         </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="col-lg-4 col-sm-6 portfolio-item element-item pro">
           <div class="item-wrapper">
             <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
               <div class="portfolio-hover">
@@ -158,17 +166,18 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
+              <div class="img" style="background-image: url('/img/workstate/Screen Shot 2018-07-19 at 1.01.34 PM.png')"></div>
               <img src="https://raw.githubusercontent.com/wesleyhuang23/zero-oxidation/master/screenshots/home.png" class="img-responsive"
                 alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Zero-Oxidation</h4>
-              <p class="text-muted">Front-End Web App</p>
+              <h4>Workstate</h4>
+              <p class="text-muted">Craft CMS</p>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="col-lg-4 col-sm-6 portfolio-item element-item pro">
           <div class="item-wrapper">
             <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
               <div class="portfolio-hover">
@@ -176,15 +185,17 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
+              <div class="img" style="background-image: url('/img/currant/Screen Shot 2018-07-18 at 4.30.04 PM.png')"></div>
+
               <img src="img/spacemx/home.png" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>SpaceMX</h4>
-              <p class="text-muted">Full Stack Web App</p>
+              <h4>Currant</h4>
+              <p class="text-muted">Front-End Web App</p>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="col-lg-4 col-sm-6 portfolio-item element-item personal">
           <div class="item-wrapper">
             <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
               <div class="portfolio-hover">
@@ -192,6 +203,8 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
+              <div class="img" style="background-image: url('img/portfolio/fanflix.jpg')"></div>
+
               <img src="img/portfolio/fanflix.jpg" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
@@ -200,7 +213,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="col-lg-4 col-sm-6 portfolio-item element-item personal">
           <div class="item-wrapper">
             <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
               <div class="portfolio-hover">
@@ -208,6 +221,8 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
+              <div class="img" style="background-image: url('img/instagram.png')"></div>
+
               <img src="img/instagram.png" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
@@ -258,15 +273,15 @@
         </div>
         <div class="col-sm-2">
           <span class="fa-stack fa-4x">
-            <img style="width: 60px; height: 60px; position: relative; top:-8px" src="https://camo.githubusercontent.com/888048baa057f2073e2c2e8644158d0a23f97114/68747470733a2f2f63646e2e7261776769742e636f6d2f7072706c782f7376672d6c6f676f732f6d61737465722f7376672f7765627061636b2e737667"
-            />
+              <i class="devicon-webpack-plain colored"></i>
+
           </span>
           <h5 class="service-heading">Webpack</h5>
         </div>
         <div class="col-sm-2">
           <span class="fa-stack fa-4x">
-            <img style="width: 60px; height: 60px; position: relative; top:-8px" src="https://vuejs.org/images/logo.png" />
-          </span>
+              <i class="devicon-vuejs-plain colored"></i>
+            </span>
           <h5 class="service-heading">VueJS</h5>
         </div>
         <div class="col-sm-2">
@@ -313,10 +328,10 @@
 
         <div class="col-sm-2">
           <span class="fa-stack fa-4x">
-            <i class="devicons devicons-terminal"></i>
+              <i class="devicon-amazonwebservices-original colored"></i>
 
           </span>
-          <h5 class="service-heading">Express</h5>
+          <h5 class="service-heading">AWS</h5>
         </div>
         <div class="col-sm-2">
           <span class="fa-stack fa-4x">
@@ -326,10 +341,10 @@
         </div>
         <div class="col-sm-2">
           <span class="fa-stack fa-4x">
-            <i class="devicon-mongodb-plain colored"></i>
+            <img src="/img/apple-touch-icon@2.png" style="width:80px; height: 80px; margin-top:-25px;">
 
           </span>
-          <h5 class="service-heading">MongoDB</h5>
+          <h5 class="service-heading">Craft CMS</h5>
         </div>
 
         <div class="col-sm-2">
@@ -575,8 +590,8 @@
             <div class="col-lg-8 col-lg-offset-2">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2>Wez on Film</h2>
-                <p class="item-intro text-muted">Thoughts from a Filmmaker</p>
+                <h2>The Learning Accelerator</h2>
+                <p class="item-intro text-muted">Blended & Personalized Learning At Work</p>
                 <img class="img-responsive img-centered" src="https://raw.githubusercontent.com/wesleyhuang23/wezonfilm/master/screenshots/home2.png"
                   alt="">
                 <img class="img-responsive img-centered" src="https://github.com/wesleyhuang23/wezonfilm/blob/master/screenshots/library.png?raw=true"
@@ -624,8 +639,8 @@
             <div class="col-lg-8 col-lg-offset-2">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2>Zero-Oxidation</h2>
-                <p class="item-intro text-muted">Reduce Free Radicals</p>
+                <h2>Workstate</h2>
+                <p class="item-intro text-muted">Solving Complex Technology Problems</p>
                 <img class="img-responsive img-centered" src="img/portfolio/orac.png" alt="">
                 <h4>Feature</h4>
                 <p>A simple website designed to teach people on the benifits of anti-oxidants to prevent disease and increase
@@ -786,6 +801,7 @@
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
   <script src="js/jqBootstrapValidation.js"></script>
+  <script src="https://npmcdn.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
   <script src="./js/agency.js"></script>
 
 </body>
