--- a/index.html
+++ b/index.html
@@ -26,14 +26,19 @@
   <meta name="application-name" content="Wesley Huang | Web Developer" />
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Wesley Huang | Web Developer">
-  <meta itemprop="description" content="">
+  <meta itemprop="description" content="Creativity and Technology">
   <meta itemprop="image" content="/img/Screen Shot 2018-07-18 at 4.58.43 PM.png">
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="http://www.wesleyhuang.co">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Wesley Huang | Web Developer">
-  <meta property="og:description" content="">
+  <meta property="og:description" content="Creativity and Technology">
   <meta property="og:image" content="/img/Screen Shot 2018-07-18 at 4.58.43 PM.png">
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Wesley Huang | Web Developer">
+  <meta name="twitter:description" content="Creativity and Technology">
+  <meta name="twitter:image" content="/img/Screen Shot 2018-07-18 at 4.58.43 PM.png">
 
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -231,6 +236,20 @@
             </div>
           </div>
         </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item element-item personal">
+            <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
+                <div class="portfolio-hover">
+                    <div class="portfolio-hover-content">
+                        <i class="fa fa-plus fa-3x"></i>
+                    </div>
+                </div>
+                <img src="img/igreet/Screen Shot 2017-05-27 at 9.44.14 PM.png" class="img-responsive" alt="">
+            </a>
+            <div class="portfolio-caption">
+                <h4>iGreet</h4>
+                <p class="text-muted">Front-End Web App</p>
+            </div>
+        </div>
 
       </div>
     </div>
@@ -335,9 +354,9 @@
         </div>
         <div class="col-sm-2">
           <span class="fa-stack fa-4x">
-            <i class="devicon-postgresql-plain colored"></i>
+            <img src="/img/shopify.svg" style="width:60px; height: 60px; margin-top:-25px;">
           </span>
-          <h5 class="service-heading">postgresSQL</h5>
+          <h5 class="service-heading">Shopify CMS</h5>
         </div>
         <div class="col-sm-2">
           <span class="fa-stack fa-4x">
@@ -391,12 +410,9 @@
       </div>
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center">
-          <p class="large text-muted">Born and raised in Southern California, as a young child I always had a creative mind and chose to pursue my passion
+          <p class="large text-muted">Born in Southern California and grew up on the island of Taiwan, I always had a curious mind and chose to pursue my passion
             for the arts at The School of Visual Arts in New York City graduating with a degree in film production. After
-            moving to LA and working as video editor for 2 years I discovered how creative it was to write code. Programming
-            became very attractive to me. So I decided to further my education in Technology and I moved to Provo, Utah to
-            attend Devmountain. While at Devmountain and taking the course ignited my desire to learn and grow as a web developer.
-            I am passionate about building applications with great user experiences.</p>
+            moving to LA and working as video editor for 2 years I discovered how creativity could be brought into the realm of technology and began to write code. It was a refreshing new discovery. So I decided to transition myself into tech. Packed my bags and moved to Northern California, the heart of the technology industry, where I continue to learn new skills and build meaningful bodies of work.</p>
           <br />
           <p>MY PROFESSIONAL RESUME:
             <a href="./resume/wesleysresumedev.pdf" target="_blank" style="cursor: pointer; background-color: grey; padding-left: 10px; padding-right: 10px; border-radius:5px; margin-left:5px;">Click Here</a>
@@ -485,24 +501,20 @@
                 <img class="img-responsive img-centered" src="img/portfolio/expanded view.png" alt="">
                 <img class="img-responsive img-centered" src="img/profile.png" alt="">
                 <img class="img-responsive img-centered" src="img/upload2.png" alt="">
-                <h4>Features</h4>
+                <h4>About</h4>
                 <p>A clone of the Instagram web app with addition to upload photos and applying filters from computer or phone.
                   Logging in with local auth users can choose to follow people and see their posts on their own feed. Comments
                   and likes are executed in real time, which will be added to a user notifications.</p>
                 <p>HTML/SCSS | ReactJS | NodeJS | Webpack | Express | MongoDB | Oauth | localAuth | Heroku</p>
-                <h4>Challenges</h4>
-                <p>Setting up Amazon S3 and have photos be uploaded with a link attached to them was complicated in the setup.
-                  Re-using components to be modified for a different view was tricky in execution, but careful understanding
-                  of how the component was created assisted in the build process.</p>
                 <ul class="list-inline">
                   <li>
-                    <a id="website" href="https://github.com/instagram-clone/instagram">See the Code</a>
+                    <a id="website" target="_blank" href="https://github.com/instagram-clone/instagram">See the Code</a>
                   </li>
                   <li>
-                    <a id="website" href="http://theinstagramclone.herokuapp.com" target="_blank">Checkout the Site</a>
+                    <a id="website" target="_blank" href="http://theinstagramclone.herokuapp.com" target="_blank">Checkout the Site</a>
                   </li>
                   <li>
-                    <a id="website" class="popup-youtube" href="https://youtu.be/AgcZfNEMtOI" target="_blank">Play Demo</a>
+                    <a id="website" target="_blank" class="popup-youtube" href="https://youtu.be/AgcZfNEMtOI" target="_blank">Play Demo</a>
                   </li>
                 </ul>
                 <h4>Demo Login</h4>
@@ -540,7 +552,7 @@
                 <img class="img-responsive img-centered" src="https://github.com/wesleyhuang23/fanflix/blob/master/screenshots/googlemaps.png?raw=true"
                   alt="Theater Detailed Page">
                 <img class="img-responsive img-centered" src="./img/portfolio/mobile.png" alt="Theater Detailed Page">
-                <h4>Features</h4>
+                <h4>About</h4>
                 <p>A Movie database website that allows user to search up to 900,000 movie titles. Searching is done in real
                   time using JQuery keyup, along with people and movie theaters. Users can browse movie detailed pages for
                   every searchable movie, included are trailer, posters, backdrops and recommendations for the movie. Users
@@ -548,21 +560,15 @@
                   will be able to create their own movie list and once added can write a review and give a score for the
                   movie.</p>
                 <p>HTML/CSS | jQuery | AngularJS | NodeJS | Express | SQL | Gulp | OAuth | Heroku</p>
-                <h4>Challenges</h4>
-                <p>The Challenging part about this project was the back-end. Using OAuth in order to have a user ID be tracked
-                  with every action the user does so each user can create their own list of movies. Making sure that the
-                  back-end was properly connected. Having some properties be global while others be personal made it more
-                  overwhelming, but taking my time and tackling one element at a time helped me put this complex part of
-                  the project together.</p>
                 <ul class="list-inline">
                   <li>
-                    <a id="website" href="https://github.com/wesleyhuang23/fanflix">See the Code</a>
+                    <a id="website" target="_blank" href="https://github.com/wesleyhuang23/fanflix">See the Code</a>
                   </li>
                   <li>
-                    <a id="website" href="http://www.fanflix.club" target="_blank">Checkout the Site</a>
+                    <a id="website" target="_blank" href="http://www.fanflix.club" target="_blank">Checkout the Site</a>
                   </li>
                   <li>
-                    <a id="website" class="popup-youtube" href="https://youtu.be/7dKsyi9Jyzk" target="_blank">Play Demo</a>
+                    <a id="website" target="_blank" class="popup-youtube" href="https://youtu.be/7dKsyi9Jyzk" target="_blank">Play Demo</a>
                   </li>
                 </ul>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">
@@ -597,20 +603,16 @@
                 <img class="img-responsive img-centered" src="https://github.com/wesleyhuang23/wezonfilm/blob/master/screenshots/library.png?raw=true"
                   alt="">
                 <img class="img-responsive img-centered" src="img/portfolio/review home.png" alt="">
-                <h4>Features</h4>
+                <h4>About</h4>
                 <p>A Movie review website where I write reviews based on my thoughts as a filmmaker. I works like a personal
                   blog for me. Users visiting the site can see a library of the movies I watched and reviewed and see a library
                   of my favorite movies. As an admin I can add movies to my own library and write reviews storing them in
                   the SQL database. Each review page has a trailer accompanying with it and details about the movie at the
                   bottom.</p>
                 <p>HTML/CSS | JQuery | AngularJS | NodeJS | Express | SQL</p>
-                <h4>Challenges</h4>
-                <p>Angular had some issues with concatenation of embedded youtube videos and cannot be bound to the dom properly.
-                  Had to figure out $sce and make a trust function and set that as the embedded video link.
-                </p>
                 <ul class="list-inline">
                   <li>
-                    <a id="website" href="https://github.com/wesleyhuang23/wezonfilm">See the Code</a>
+                    <a id="website" target="_blank" href="https://github.com/wesleyhuang23/wezonfilm">See the Code</a>
                   </li>
                   <li>Website: Coming Soon</li>
                 </ul>
@@ -641,20 +643,14 @@
                 <!-- Project Details Go Here -->
                 <h2>Workstate</h2>
                 <p class="item-intro text-muted">Solving Complex Technology Problems</p>
-                <img class="img-responsive img-centered" src="img/portfolio/orac.png" alt="">
-                <h4>Feature</h4>
-                <p>A simple website designed to teach people on the benifits of anti-oxidants to prevent disease and increase
-                  longevity. Each view works like a chapter telling the story of how our bodies work and why we need anti-oxidants.
-                  One view has a list of the top 100 foods with the highest anti-oxidant levels based on the ORAC value.
-                  Users can search through them and click on the link to be taken to more information on the food. I hope
-                  after a user goes through the website will have the knowlege to apply anti-oxidants into their daily lives.</p>
-                <p>HTML/CSS | JQuery | AngularJS</p>
+                <img class="img-responsive img-centered" src="/img/workstate/Screen Shot 2018-07-19 at 1.02.15 PM.png" alt="">
+                <img class="img-responsive img-centered" src="/img/workstate/Screen Shot 2018-07-19 at 1.02.38 PM.png" alt="">
+                <h4>About</h4>
+                <p>Workstate is a Craft CMS project, which was a redesign of their old website that was built on hubspot.</p>
+                <p>HTML/CSS | Javascript | JQuery | Bootstrap | Gulp | SASS | Craft CMS | s3 </p>
                 <ul class="list-inline">
                   <li>
-                    <a id="website" href="https://github.com/wesleyhuang23/zero-oxidation">See the Code</a>
-                  </li>
-                  <li>
-                    <a id="website" href="https://wesleyhuang23.github.io/zero-oxidation/#/">Checkout the Site</a>
+                    <a id="website" target="_blank" href="https://www.workstate.com">Checkout the Site</a>
                   </li>
                 </ul>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">
@@ -682,21 +678,21 @@
             <div class="col-lg-8 col-lg-offset-2">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2>Flockoli</h2>
+                <h2>Orthoscience</h2>
                 <p class="item-intro text-muted">Taking the Fuss out of what's for lunch</p>
-                <img class="img-responsive img-centered" src="img/flockoli/flock3.png" alt="">
-                <img class="img-responsive img-centered" src="img/flockoli/flockoli-ui-choose (1).png" alt="">
-                <img class="img-responsive img-centered" src="img/flockoli/flockoli-ui-confirm.png" alt="">
+                <img class="img-responsive img-centered" src="/img/os/Screen Shot 2018-07-19 at 12.56.01 PM.png" alt="">
+                <img class="img-responsive img-centered" src="/img/os/Screen Shot 2018-07-19 at 12.57.37 PM.png" alt="">
                 <p>Flockoli is an app built on the FlockOS messaging application. Flockoli allows flock message users to order
                   lunch with a simple /eat command in their chat box. A streamlined process allows users to order lunch while
                   conserving valuable time and effort while at work. Using the /eat command the widget sidebar will apear
                   showing users what choices there are in their local area. Once they select they will be taken to the confirmation
                   page. This was one of my projects at Developer Week Hackathon in San Francisco</p>
                 <p>HTML/CSS | JQuery | AngularJS | NodeJS | FlockOS</p>
-                <p>
-                  <strong>Third Place Winner</strong> at Developer Week Hackathon Flock Sponsor Challenge.
-                  <a href="http://www.developerweek.com/developerweek-hackathon-winners/">Click for Details</a>
-                </p>
+                <ul class="list-inline">
+                  <li>
+                    <a id="website" target="_blank" href="https://www.orthoscience.com">Checkout the Site</a>
+                  </li>
+                </ul>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">
                   <i class="fa fa-times"></i> Close Project</button>
               </div>
@@ -722,22 +718,18 @@
             <div class="col-lg-8 col-lg-offset-2">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2>SpaceMX</h2>
-                <p class="item-intro text-muted">Space Marketplace Exchange</p>
-                <img class="img-responsive img-centered" src="img/spacemx/calendar.png" alt="">
-                <img class="img-responsive img-centered" src="img/spacemx/venue.png" alt="">
-                <h4>Features</h4>
-                <p>A online platform for companies to rent their office spaces. Search through thousands of listings with google
-                  maps. Create and list venues on the site.</p>
-                <p>HTML/CSS | JQuery | Javscript | BootstrapUI | AngularJS | Python | Django | Docker</p>
-                <h4>Challenges</h4>
-                <p>Coming up with complex Javascript logic for proper functionality of specific features, such as making events
-                  show up on the calendar. Working with docker and working with code written by previous engineers.</p>
+                <h2>Currant</h2>
+                <p class="item-intro text-muted">The Brighter way to save Energy</p>
+                <img class="img-responsive img-centered" src="/img/currant/Screen Shot 2018-07-18 at 4.30.46 PM.png" alt="">
+                <img class="img-responsive img-centered" src="/img/currant/Screen Shot 2018-07-18 at 4.31.14 PM.png" alt="">
+                <h4>About</h4>
+                <p>Currant is a new startup based in Northon California. The website was built to market their new product. A socket monitor that measures the level of electricity being using in the home.</p>
+                <p>HTML/CSS | JQuery | Javscript | Bootstrap | Gulp | SASS | S3</p>
                 <ul class="list-inline">
                   <li>
-                    <a id="website" href="https://github.com/wesleyhuang23/spaceMX-venue">See the Code</a>
+                    <a id="website" target="_blank" href="https://currant.com">Checkout the Website</a>
                   </li>
-                  <!--<li><a id="website" href="https://wesleyhuang23.github.io/zero-oxidation/#/">Checkout the Site</a></li>-->
+                  <!--<li><a id="website" target="_blank" href="https://wesleyhuang23.github.io/zero-oxidation/#/">Checkout the Site</a></li>-->
                 </ul>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">
                   <i class="fa fa-times"></i> Close Project</button>
@@ -766,22 +758,17 @@
                 <h2>iGreet</h2>
                 <p class="item-intro text-muted">A daily greeting</p>
                 <img class="img-responsive img-centered" src="img/igreet/img.png" alt="">
-                <img class="img-responsive img-centered" src="img/igreet/todo.png" alt="">
                 <img class="img-responsive img-centered" src="img/igreet/weather.png" alt="">
-                <h4>Features</h4>
+                <h4>About</h4>
                 <p>A clone of the chrome extention called momentum. Has a digital clock that will greet with the correct time
                   of day, update quote and image on a new day. Create a todo list that is stored using localStorage.</p>
                 <p>HTML/CSS | Javscript | VueJS| localStorage | unsplash API</p>
-                <h4>Challenges</h4>
-                <p>Every front end component had it's own logic and required information from other components to show the correct
-                  information on the site. Figuring out the flow and the order of operation with multiple components was
-                  challenging</p>
                 <ul class="list-inline">
                   <li>
-                    <a id="website" href="https://github.com/wesleyhuang23/igreet">See the Code</a>
+                    <a id="website" target="_blank" href="https://github.com/wesleyhuang23/igreet">See the Code</a>
                   </li>
                   <li>
-                    <a id="website" href="https://wesleyhuang23.github.io/igreet/">Checkout the Site</a>
+                    <a id="website" target="_blank" href="https://wesleyhuang23.github.io/igreet/">Checkout the Site</a>
                   </li>
                 </ul>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">
