--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
   gtag('js', new Date());
   gtag('config', 'UA-122449348-1');
   </script>
+  <meta name="application-name" content="Wesley Huang | Web Developer" />
+  <!-- Google / Search Engine Tags -->
+  <meta itemprop="name" content="Wesley Huang | Web Developer">
+  <meta itemprop="description" content="Creativity and Technology">
+  <meta itemprop="image" content="/img/Screen Shot 2018-07-18 at 4.58.43 PM.png">
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="http://www.wesleyhuang.co">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Wesley Huang | Web Developer">
+  <meta property="og:description" content="Creativity and Technology">
+  <meta property="og:image" content="/img/Screen Shot 2018-07-18 at 4.58.43 PM.png">
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Wesley Huang | Web Developer">
+  <meta name="twitter:description" content="Creativity and Technology">
+  <meta name="twitter:image" content="/img/Screen Shot 2018-07-18 at 4.58.43 PM.png">
   <title>Wesley Huang | Web Developer</title>
 </head>
 <body id="particles-js">
