--- a/index.html
+++ b/index.html
@@ -598,23 +598,17 @@
                 <!-- Project Details Go Here -->
                 <h2>The Learning Accelerator</h2>
                 <p class="item-intro text-muted">Blended & Personalized Learning At Work</p>
-                <img class="img-responsive img-centered" src="https://raw.githubusercontent.com/wesleyhuang23/wezonfilm/master/screenshots/home2.png"
+                <img class="img-responsive img-centered" src="/img/tla/company.png"
                   alt="">
-                <img class="img-responsive img-centered" src="https://github.com/wesleyhuang23/wezonfilm/blob/master/screenshots/library.png?raw=true"
+                <img class="img-responsive img-centered" src="/img/tla/blog.png"
                   alt="">
-                <img class="img-responsive img-centered" src="img/portfolio/review home.png" alt="">
                 <h4>About</h4>
-                <p>A Movie review website where I write reviews based on my thoughts as a filmmaker. I works like a personal
-                  blog for me. Users visiting the site can see a library of the movies I watched and reviewed and see a library
-                  of my favorite movies. As an admin I can add movies to my own library and write reviews storing them in
-                  the SQL database. Each review page has a trailer accompanying with it and details about the movie at the
-                  bottom.</p>
-                <p>HTML/CSS | JQuery | AngularJS | NodeJS | Express | SQL</p>
+                <p>The Learning Accelerator is a Non-profit orgainization that specializes in the personalized learning experience for student across the country. Providing them with one on one interactions with teachers and technology to accelerate their learning experience. This was a Craft Build of their Company and main site.</p>
+                <p>HTML/CSS | Javascript | JQuery | Craft CMS | Gulp | Sass | s3</p>
                 <ul class="list-inline">
                   <li>
-                    <a id="website" target="_blank" href="https://github.com/wesleyhuang23/wezonfilm">See the Code</a>
+                    <a id="website" target="_blank" href="https://practices.learningaccelerator.org/">Checkout the Website</a>
                   </li>
-                  <li>Website: Coming Soon</li>
                 </ul>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">
                   <i class="fa fa-times"></i> Close Project</button>
@@ -679,15 +673,11 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
                 <h2>Orthoscience</h2>
-                <p class="item-intro text-muted">Taking the Fuss out of what's for lunch</p>
+                <p class="item-intro text-muted">Built for Orthodontist</p>
                 <img class="img-responsive img-centered" src="/img/os/Screen Shot 2018-07-19 at 12.56.01 PM.png" alt="">
                 <img class="img-responsive img-centered" src="/img/os/Screen Shot 2018-07-19 at 12.57.37 PM.png" alt="">
-                <p>Flockoli is an app built on the FlockOS messaging application. Flockoli allows flock message users to order
-                  lunch with a simple /eat command in their chat box. A streamlined process allows users to order lunch while
-                  conserving valuable time and effort while at work. Using the /eat command the widget sidebar will apear
-                  showing users what choices there are in their local area. Once they select they will be taken to the confirmation
-                  page. This was one of my projects at Developer Week Hackathon in San Francisco</p>
-                <p>HTML/CSS | JQuery | AngularJS | NodeJS | FlockOS</p>
+                <p>Orthosciene is a new startup based in Mill Valley, building a modern application for orthodontist to share and evaluate cases in on integrated app. This website was their marketing site designed to market their product.</p>
+                <p>HTML/CSS | Javascript | Craft CMS | JQuery | s3 | Webpack | SASS</p>
                 <ul class="list-inline">
                   <li>
                     <a id="website" target="_blank" href="https://www.orthoscience.com">Checkout the Site</a>
