--- a/index.html
+++ b/index.html
@@ -237,17 +237,20 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 portfolio-item element-item personal">
+            <div class="item-wrapper">
             <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
                 <div class="portfolio-hover">
                     <div class="portfolio-hover-content">
                         <i class="fa fa-plus fa-3x"></i>
                     </div>
                 </div>
+                <div class="img" style="background-image: url('img/igreet/Screen Shot 2017-05-27 at 9.44.14 PM.png')"></div>
                 <img src="img/igreet/Screen Shot 2017-05-27 at 9.44.14 PM.png" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
                 <h4>iGreet</h4>
                 <p class="text-muted">Front-End Web App</p>
+            </div>
             </div>
         </div>
 
@@ -465,14 +468,6 @@
           <span class="copyright">Copyright &copy; wesleyhuang.co</span>
         </div>
         <div class="col-md-4">
-          <ul class="list-inline quicklinks">
-            <li>
-              <a href="#">Privacy Policy</a>
-            </li>
-            <li>
-              <a href="#">Terms of Use</a>
-            </li>
-          </ul>
         </div>
       </div>
     </div>
