--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="intro-text">
         <div class="intro-heading">Wesley Huang</div>
         <div class="intro-lead-in cd-headline clip is-full-width">
-          <span class="cd-words-wrapper who-creates" style="display:inline;">
+          <span class="cd-words-wrapper who-creates" style="display:inline-block; width: 168px;">
             <b class="is-hidden">Constant Learner</b>
             <b class="is-visible">Web Developer</b>
             <b class="is-hidden">Creative Thinker</b>
