update graph img

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Wesley Huang | Web Developer">
   <meta itemprop="description" content="Creativity and Technology">
-  <meta itemprop="image" content="/img/Screen Shot 2018-07-18 at 4.58.43 PM.png">
+  <meta itemprop="image" content="/img/graphimg.png">
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="http://www.wesleyhuang.co">
   <meta property="og:type" content="website">
