--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Wesley Huang | Web Developer">
   <meta property="og:description" content="Creativity and Technology">
-  <meta property="og:image" content="/img/Screen Shot 2018-07-18 at 4.58.43 PM.png">
+  <meta property="og:image" content="/img/graphimg.png">
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Wesley Huang | Web Developer">
   <meta name="twitter:description" content="Creativity and Technology">
-  <meta name="twitter:image" content="/img/Screen Shot 2018-07-18 at 4.58.43 PM.png">
+  <meta name="twitter:image" content="/img/graphimg.png">
   <title>Wesley Huang | Web Developer</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122449348-1"></script>
