--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Wesley Huang | Web Developer">
   <meta itemprop="description" content="Creativity and Technology">
-  <meta itemprop="image" content="/img/graphimg.png">
+  <meta itemprop="image" content="img/graphimg.png">
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="http://www.wesleyhuang.co">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Wesley Huang | Web Developer">
   <meta property="og:description" content="Creativity and Technology">
-  <meta property="og:image" content="/img/graphimg.png">
+  <meta property="og:image" content="img/graphimg.png">
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Wesley Huang | Web Developer">
   <meta name="twitter:description" content="Creativity and Technology">
-  <meta name="twitter:image" content="/img/graphimg.png">
+  <meta name="twitter:image" content="img/graphimg.png">
   <title>Wesley Huang | Web Developer</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122449348-1"></script>
